🔨 Fix: deploy.sh script modification, synchronously adapt to CICD scripts, and add data storage directory parameters.

--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -105,7 +105,7 @@ jobs:
           cd $HOME/nexent/docker
           cp .env.example .env
           if [ "$DEPLOYMENT_MODE" = "production" ]; then
-            ./deploy.sh --mode 3 --is-mainland N --enable-terminal N --version full
+            ./deploy.sh --mode 3 --is-mainland N --enable-terminal N --version 2 --root-dir "$HOME/nexent-production-data"
           else
-            ./deploy.sh --mode 1 --is-mainland N --enable-terminal N --version full
+            ./deploy.sh --mode 1 --is-mainland N --enable-terminal N --version 2 --root-dir "$HOME/nexent-development-data"
           fi
