🐛 After clicking Generate Agent, the automatically generated agent variable name always indicates that it is not available. #855

--- a/backend/prompts/utils/prompt_generate.yaml
+++ b/backend/prompts/utils/prompt_generate.yaml
@@ -228,8 +228,8 @@ AGENT_DISPLAY_NAME_SYSTEM_PROMPT: |-
   你可以参考任务描述，结合工具和助手信息，给当前Agent应用起一个智能体展示名称。
   
   ### 要求：
-  1.你只需要输出Agent的智能体展示名称，不要显示无关内容与无关的格式。
-  2.生成的智能体展示名称的语言需要与用户提示词的语言保持一致，用一个词语表示即可，以助手或者Agent结尾，能明确表示出该Agent的职责。
+  1.你只需要输出Agent的名称，不要显示无关内容与无关的格式。
+  2.生成的名称的语言需要与用户提示词的语言保持一致，用一个词语表示即可，以助手或者Agent结尾，能明确表示出该Agent的职责。
   
   ### 参考示例：
   示例1：
