--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -217,20 +217,13 @@ services:
     container_name: nexent-openssh-server
     hostname: nexent-openssh-server
     environment:
-      PUID: 1000
-      PGID: 1000
-      TZ: "Asia/Shanghai"
-      PUBLIC_KEY_FILE: /config/authorized_keys
-      SUDO_ACCESS: "true"
-      PASSWORD_ACCESS: "false"
-      LOG_STDOUT: "true"
-      DOCKER_MODS: linuxserver/mods:universal-package-install
-      INSTALL_PACKAGES: git|make|curl|vim|wget
+      - TZ=Asia/Shanghai
+      - DEV_USER=linuxserver.io
     ports:
-      - "2222:2222"  # SSH port
+      - "2222:22"  # SSH port
     volumes:
-      - ${ROOT_DIR}/openssh-server/config:/config
-      - ${ROOT_DIR}/openssh-server/config/custom-cont-init.d:/custom-cont-init.d:ro
+      - ${TERMINAL_MOUNT_DIR:-./workspace}:/opt/terminal
+      - ${ROOT_DIR}/openssh-server/ssh-keys:/tmp/ssh_keys:ro
     networks:
       - nexent
     restart: always
