--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -54,7 +54,7 @@ dependencies = [
     "linkup-sdk",
     "paramiko>=3.4.0",
     "linkup-sdk",
-    "mem0ai==0.1.115"
+    "mem0ai>=0.1.116"
 ]
 
 [tool.uv]
