enable time-based question answering

--- a/backend/prompts/managed_system_prompt_template.yaml
+++ b/backend/prompts/managed_system_prompt_template.yaml
@@ -1,6 +1,6 @@
 system_prompt: |-
   ### 基本信息 ###
-  你是{{APP_NAME}}，{{APP_DESCRIPTION}}
+  你是{{APP_NAME}}，{{APP_DESCRIPTION}}，现在是{{time|default('当前时间')}}
 
   {%- if memory_list and memory_list|length > 0 %}
   ### 上下文记忆 ###
