--- a/.github/workflows/docker-build-push-overseas.yml
+++ b/.github/workflows/docker-build-push-overseas.yml
@@ -147,6 +147,46 @@ jobs:
       - name: Push web image (arm64) to DockerHub
         run: docker push nexent/nexent-web:arm64
 
+  build-and-push-terminal-amd64:
+    runs-on: ${{ fromJson(inputs.runner_label_json) }}
+    steps:
+      - name: Set up Docker Buildx
+        run: |
+          if ! docker buildx inspect nexent_builder > /dev/null 2>&1; then
+            docker buildx create --name nexent_builder --use
+          else
+            docker buildx use nexent_builder
+          fi
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Build terminal image (amd64) and load locally
+        run: |
+          docker buildx build --platform linux/amd64 -t nexent/nexent-terminal:amd64 --load -f make/terminal/Dockerfile .
+      - name: Login to DockerHub
+        run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
+      - name: Push terminal image (amd64) to DockerHub
+        run: docker push nexent/nexent-terminal:amd64
+
+  build-and-push-terminal-arm64:
+    runs-on: ${{ fromJson(inputs.runner_label_json) }}
+    steps:
+      - name: Set up Docker Buildx
+        run: |
+          if ! docker buildx inspect nexent_builder > /dev/null 2>&1; then
+            docker buildx create --name nexent_builder --use
+          else
+            docker buildx use nexent_builder
+          fi
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Build terminal image (arm64) and load locally
+        run: |
+          docker buildx build --platform linux/arm64 -t nexent/nexent-terminal:arm64 --load -f make/terminal/Dockerfile .
+      - name: Login to DockerHub
+        run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
+      - name: Push terminal image (arm64) to DockerHub
+        run: docker push nexent/nexent-terminal:arm64
+
   manifest-push-main:
     runs-on: ubuntu-latest
     needs:
@@ -191,3 +231,18 @@ jobs:
             nexent/nexent-web:amd64 \
             nexent/nexent-web:arm64
           docker manifest push nexent/nexent-web:latest
+
+  manifest-push-terminal:
+    runs-on: ubuntu-latest
+    needs:
+      - build-and-push-terminal-amd64
+      - build-and-push-terminal-arm64
+    steps:
+      - name: Login to DockerHub
+        run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
+      - name: Create and push manifest for terminal (DockerHub)
+        run: |
+          docker manifest create nexent/nexent-terminal:latest \
+            nexent/nexent-terminal:amd64 \
+            nexent/nexent-terminal:arm64
+          docker manifest push nexent/nexent-terminal:latest
