--- a/.github/workflows/docker-build-push-mainland.yml
+++ b/.github/workflows/docker-build-push-mainland.yml
@@ -161,11 +161,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Build terminal image (amd64) and load locally
         run: |
-          docker buildx build --platform linux/amd64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent-terminal:amd64 -f make/terminal/Dockerfile --build-arg MIRROR=https://pypi.tuna.tsinghua.edu.cn/simple --build-arg APT_MIRROR=tsinghua .
+          docker buildx build --platform linux/amd64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent-ubuntu-terminal:amd64 -f make/terminal/Dockerfile --build-arg MIRROR=https://pypi.tuna.tsinghua.edu.cn/simple .
       - name: Login to Tencent Cloud
         run: echo ${{ secrets.TCR_PASSWORD }} | docker login ccr.ccs.tencentyun.com --username=${{ secrets.TCR_USERNAME }} --password-stdin
       - name: Push terminal image (amd64) to Tencent Cloud
-        run: docker push ccr.ccs.tencentyun.com/nexent-hub/nexent-terminal:amd64
+        run: docker push ccr.ccs.tencentyun.com/nexent-hub/nexent-ubuntu-terminal:amd64
 
   build-and-push-terminal-arm64:
     runs-on: ${{ fromJson(inputs.runner_label_json) }}
@@ -181,11 +181,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Build terminal image (arm64) and load locally
         run: |
-          docker buildx build --platform linux/arm64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent-terminal:arm64 -f make/terminal/Dockerfile --build-arg MIRROR=https://pypi.tuna.tsinghua.edu.cn/simple --build-arg APT_MIRROR=tsinghua .
+          docker buildx build --platform linux/arm64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent-ubuntu-terminal:arm64 -f make/terminal/Dockerfile --build-arg MIRROR=https://pypi.tuna.tsinghua.edu.cn/simple .
       - name: Login to Tencent Cloud
         run: echo ${{ secrets.TCR_PASSWORD }} | docker login ccr.ccs.tencentyun.com --username=${{ secrets.TCR_USERNAME }} --password-stdin
       - name: Push terminal image (arm64) to Tencent Cloud
-        run: docker push ccr.ccs.tencentyun.com/nexent-hub/nexent-terminal:arm64
+        run: docker push ccr.ccs.tencentyun.com/nexent-hub/nexent-ubuntu-terminal:arm64
 
   manifest-push-main:
     runs-on: ubuntu-latest
@@ -242,7 +242,7 @@ jobs:
         run: echo ${{ secrets.TCR_PASSWORD }} | docker login ccr.ccs.tencentyun.com --username=${{ secrets.TCR_USERNAME }} --password-stdin
       - name: Create and push manifest for terminal (Tencent Cloud)
         run: |
-          docker manifest create ccr.ccs.tencentyun.com/nexent-hub/nexent-terminal:latest \
-            ccr.ccs.tencentyun.com/nexent-hub/nexent-terminal:amd64 \
-            ccr.ccs.tencentyun.com/nexent-hub/nexent-terminal:arm64
-          docker manifest push ccr.ccs.tencentyun.com/nexent-hub/nexent-terminal:latest
+          docker manifest create ccr.ccs.tencentyun.com/nexent-hub/nexent-ubuntu-terminal:latest \
+            ccr.ccs.tencentyun.com/nexent-hub/nexent-ubuntu-terminal:amd64 \
+            ccr.ccs.tencentyun.com/nexent-hub/nexent-ubuntu-terminal:arm64
+          docker manifest push ccr.ccs.tencentyun.com/nexent-hub/nexent-ubuntu-terminal:latest
