--- a/.github/workflows/docker-build-push-overseas.yml
+++ b/.github/workflows/docker-build-push-overseas.yml
@@ -161,11 +161,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Build terminal image (amd64) and load locally
         run: |
-          docker buildx build --platform linux/amd64 -t nexent/nexent-terminal:amd64 --load -f make/terminal/Dockerfile .
+          docker buildx build --platform linux/amd64 -t nexent/nexent-ubuntu-terminal:amd64 --load -f make/terminal/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push terminal image (amd64) to DockerHub
-        run: docker push nexent/nexent-terminal:amd64
+        run: docker push nexent/nexent-ubuntu-terminal:amd64
 
   build-and-push-terminal-arm64:
     runs-on: ${{ fromJson(inputs.runner_label_json) }}
@@ -181,11 +181,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Build terminal image (arm64) and load locally
         run: |
-          docker buildx build --platform linux/arm64 -t nexent/nexent-terminal:arm64 --load -f make/terminal/Dockerfile .
+          docker buildx build --platform linux/arm64 -t nexent/nexent-ubuntu-terminal:arm64 --load -f make/terminal/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push terminal image (arm64) to DockerHub
-        run: docker push nexent/nexent-terminal:arm64
+        run: docker push nexent/nexent-ubuntu-terminal:arm64
 
   manifest-push-main:
     runs-on: ubuntu-latest
@@ -242,7 +242,7 @@ jobs:
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Create and push manifest for terminal (DockerHub)
         run: |
-          docker manifest create nexent/nexent-terminal:latest \
-            nexent/nexent-terminal:amd64 \
-            nexent/nexent-terminal:arm64
-          docker manifest push nexent/nexent-terminal:latest
+          docker manifest create nexent/nexent-ubuntu-terminal:latest \
+            nexent/nexent-ubuntu-terminal:amd64 \
+            nexent/nexent-ubuntu-terminal:arm64
+          docker manifest push nexent/nexent-ubuntu-terminal:latest
