--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "check-all": "npm run type-check && npm run lint && npm run build"
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
@@ -90,6 +92,8 @@
     "@types/node": "22.15.16",
     "@types/react": "18.3.20",
     "@types/react-dom": "18.3.6",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "15.5.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "5.8.3"
