--- a/docker/.env.example
+++ b/docker/.env.example
@@ -30,6 +30,7 @@ ELASTIC_PASSWORD=nexent@2025
 ELASTICSEARCH_SERVICE=http://nexent:5010/api
 NEXENT_MCP_SERVER=http://nexent:5011
 DATA_PROCESS_SERVICE=http://nexent-data-process:5012/api
+NORTHBOUND_API_SERVER=http://nexent:5013/api
 
 # Postgres Config
 POSTGRES_HOST=nexent-postgresql
