🐛 Expose port 5013 in every deployment mode 🐛 Minor typo fix
🐛 Minor typo fix

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -93,6 +93,8 @@ services:
         max-file: "3"    # Maximum number of log files to keep
     networks:
       - nexent
+    ports:
+      - "5013:5013"  # Northbound service port
     entrypoint: ["/bin/bash", "-c", "python backend/nexent_mcp_service.py & python backend/northbound_service.py & python backend/main_service.py"]
 
   nexent-web:
