--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -80,6 +80,7 @@ services:
     restart: always
     ports:
       - "5010:5010"  # Backend service port
+      - "5013:5013"  # Northbound service port
     volumes:
       - ${NEXENT_USER_DIR:-$HOME/nexent}:/mnt/nexent
       - ${ROOT_DIR}/openssh-server/ssh-keys:/opt/ssh-keys:ro
