--- a/make/terminal/Dockerfile
+++ b/make/terminal/Dockerfile
@@ -1,29 +1,23 @@
 FROM ubuntu:24.04
 
 # Set environment variables
-ENV DEBIAN_FRONTEND=noninteractive
-ENV TZ=Asia/Shanghai
 ENV CONDA_DIR=/opt/conda
-ENV PATH=$CONDA_DIR/bin:$PATH
 
-# Install base tools and dependencies
-RUN apt-get update && apt-get install -y \
-    openssh-server \
-    sudo \
-    curl \
-    wget \
-    git \
-    vim \
-    nano \
-    build-essential \
-    python3 \
-    python3-pip \
-    python3-venv \
-    ca-certificates \
-    gnupg \
-    lsb-release \
-    software-properties-common \
-    && rm -rf /var/lib/apt/lists/*
+# Install base tools and dependencies with retry mechanism and network optimization
+RUN apt-get clean && \
+    apt-get update --fix-missing && \
+    apt-get install -y --no-install-recommends \
+        openssh-server \
+        curl \
+        wget \
+        git \
+        vim \
+        build-essential \
+        python3 \
+        python3-pip \
+        python3-venv \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 # Create development user
 ARG DEV_USER=linuxserver.io
@@ -45,6 +39,10 @@ RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-$(if [ "$TA
 # Set conda permissions
 RUN chown -R $DEV_USER:$DEV_USER $CONDA_DIR
 
+# Add conda to PATH and initialize
+ENV PATH="$CONDA_DIR/bin:$PATH"
+RUN conda init
+
 # Create .ssh directory
 RUN mkdir -p /home/$DEV_USER/.ssh && \
     chown $DEV_USER:$DEV_USER /home/$DEV_USER/.ssh && \
@@ -62,4 +60,4 @@ COPY make/terminal/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 EXPOSE 22
-ENTRYPOINT ["/entrypoint.sh"] 
+ENTRYPOINT ["/entrypoint.sh"]
