🔨 improve the CICD process.

--- a/.github/workflows/automic-unit-test.yml
+++ b/.github/workflows/automic-unit-test.yml
@@ -9,8 +9,16 @@ on:
         default: '["ubuntu-latest"]'
   pull_request:
     branches: [develop]
+    paths:
+      - 'backend/**'
+      - 'sdk/**'
+      - 'test/**'
   push:
     branches: [develop]
+    paths:
+      - 'backend/**'
+      - 'sdk/**'
+      - 'test/**'
 
 jobs:
   test:
