🔨 improve the CICD process.

--- a/.github/workflows/automic-build-data-process-dev.yml
+++ b/.github/workflows/automic-build-data-process-dev.yml
@@ -1,7 +1,7 @@
 name: Docker Build Data-Process Images
 
 concurrency:
-  group: docker-build-dev-${{ github.ref }}
+  group: docker-build-data-process-dev-${{ github.ref }}
   cancel-in-progress: true
 
 on:
