--- a/.github/workflows/automic-build-terminal-dev.yml
+++ b/.github/workflows/automic-build-terminal-dev.yml
@@ -1,7 +1,7 @@
 name: Docker Build Terminal Images
 
 concurrency:
-  group: docker-build-dev-${{ github.ref }}
+  group: docker-build-terminal-dev-${{ github.ref }}
   cancel-in-progress: true
 
 on:
