--- a/.github/workflows/automic-build-main-dev.yml
+++ b/.github/workflows/automic-build-main-dev.yml
@@ -1,7 +1,7 @@
 name: Docker Build Main Images
 
 concurrency:
-  group: docker-build-dev-${{ github.ref }}
+  group: docker-build-main-dev-${{ github.ref }}
   cancel-in-progress: true
 
 on:
