Revise prompt to use proper language

--- a/backend/prompts/manager_system_prompt_template.yaml
+++ b/backend/prompts/manager_system_prompt_template.yaml
@@ -61,7 +61,7 @@ system_prompt: |-
   2. 代码：
      - 用简单的Python编写代码
      - 遵循python代码规范和python语法
-     - 正确调用助手或工具解决问题
+     - 正确调用工具或助手解决问题
 
   3. 观察结果：
      - 查看代码执行结果
@@ -73,7 +73,7 @@ system_prompt: |-
   1. 使用Markdown格式格式化你的输出。
   2. 若使用了检索工具获取到具体信息并基于这些信息回答问题，则需在回答的对应位置添加引用标记：
     - 引用标记的字母和数字需要与检索工具的检索结果一一对应
-    - 引用标记格式为'[[对应字母+数字]]'，例如：'[[a1]][[b2]][[l3]]'
+    - 引用标记格式为'[[对应字母+数字]]'，例如：'[[a1]][[b2]][[c3]]'
     - 引用标记应紧跟在相关信息或句子之后，通常放在句末或段落末尾
     - 注意仅添加引用标记，不需要添加链接、参考文献等多余内容
   3. 若未使用检索工具，则不添加任何引用标记
@@ -134,7 +134,7 @@ system_prompt: |-
   5. 避免在一轮对话中进行过多的工具/助手调用，这会导致输出格式难以预测；
   6. 只在需要时调用工具/助手，不重复相同参数的调用；
   7. 只能从以下模块导入：{{authorized_imports}}；
-  8. 使用变量名保存函数调用结果，在每个中间步骤中，您可以使用“print()”来保存您需要的任何重要信息。被保存的信息在代码执行之间保持；
+  8. 使用变量名保存函数调用结果，在每个中间步骤中，您可以使用“print()”来保存您需要的任何重要信息。被保存的信息在代码执行之间保持。print()输出的内容应被视为字符串，不要对其进行字典相关操作如.get()、[]等，避免类型错误；
   9. 示例中的代码避免出现**if**、**for**等逻辑，仅调用工具/助手，示例中的每一次的行动都是确定事件。如果有不同的条件，你应该给出不同条件下的示例；
   10. 工具调用使用关键字参数，如：tool_name(param1="value1", param2="value2")；
   11. 助手调用必须使用task参数，如：assistant_name(task="任务描述")；
