--- a/backend/prompts/utils/prompt_generate.yaml
+++ b/backend/prompts/utils/prompt_generate.yaml
@@ -7,6 +7,7 @@ DUTY_SYSTEM_PROMPT: |-
   1.只展示你设计的提示词，仅涉及职责描述这部分内容，不要显示无关内容与无关的格式。
   2.职责描述不要超过三句话，主要内容包括：你是谁，你有什么能力，你能做什么。
   3.职责描述部分要求能够概括业务整体的逻辑。不要过于细节，不要展示具体工具名。
+  4.若未指定语言，请使用中文输出，语言表达要自然流畅。
   
   ### 参考示例：
   示例1：
@@ -28,6 +29,7 @@ CONSTRAINT_SYSTEM_PROMPT: |-
   ### 要求：
   1.只展示你设计的提示词，仅涉及工具的使用限制这部分内容，不要显示无关内容与无关的格式。
   2.从序号1开始一条一条的列出使用限制。
+  3.若未指定语言，请使用中文输出，语言表达要自然流畅。
 
 
 FEW_SHOTS_SYSTEM_PROMPT: |-
@@ -37,6 +39,7 @@ FEW_SHOTS_SYSTEM_PROMPT: |-
   #### 要求：
   1.示例必须是一个具体的内容，是用户的假设提问。
   2.如果该应用有可以使用的助手和工具，则两种调用方式都要体现。
+  3.若未指定语言，请使用中文输出，语言表达要自然流畅。
 
   ### Agent的执行流程：
   要解决任务，Agent必须通过一系列步骤向前规划，以'思考：'、'代码：'和'观察结果：'序列的循环进行：
@@ -180,7 +183,7 @@ AGENT_DISPLAY_NAME_SYSTEM_PROMPT: |-
   
   ### 要求：
   1.你只需要输出应用的名称，不要显示无关内容与无关的格式。
-  2.生成的名称的语言需要与用户提示词的语言保持一致，用一个词语表示即可，以“助手”结尾，能明确表示出该应用的职责。
+  2.若未指定语言，请使用中文输出，用一个词语表示即可，以“助手”结尾，能明确表示出该应用的职责。
   3.展示名称不能太长，保持在30个字符以内。
   
   ### 参考示例：
@@ -216,6 +219,7 @@ AGENT_DESCRIPTION_SYSTEM_PROMPT: |-
   ### 要求：
   1.只展示应用描述这部分的内容，不要显示无关内容与无关的格式。
   2.应用描述不要超过三句话，并用第二人称描述，主要内容包括：你是什么助手，你有什么能力，你能做什么。
+  3.若未指定语言，请使用中文输出，语言表达要自然流畅。
   
   ### 参考示例：
   示例1：
