--- a/.github/workflows/automic-unit-test.yml
+++ b/.github/workflows/automic-unit-test.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
     inputs:
       runner_label_json:
-        description: 'JSON格式的runner标签数组（如["ubuntu-latest"]或["self-hosted"])'
+        description: 'runner array in json format (e.g. ["ubuntu-latest"] or ["self-hosted"])'
         required: false
         default: '["ubuntu-latest"]'
   pull_request:
