--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,32 +1,32 @@
-# 构建 VitePress 站点并将其部署到 GitHub Pages 的工作流程
+# Workflow to build VitePress site and deploy it to GitHub Pages
 #
 name: Deploy VitePress Docs to Pages
 
 on:
-  # 在针对 `develop` 分支的推送上运行
+  # Run on pushes to the `develop` branch
   push:
     branches: [develop]
-    # 只有当doc目录下的文件发生变化时才触发
+    # Only trigger when files in the doc directory change
     paths: 
       - 'doc/**'
 
-  # 允许从 Actions 选项卡手动运行此工作流程
+  # Allow manual running of this workflow from the Actions tab
   workflow_dispatch:
 
-# 设置 GITHUB_TOKEN 的权限，以允许部署到 GitHub Pages
+# Set GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# 只允许同时进行一次部署，跳过正在运行和最新队列之间的运行队列
-# 但是，不要取消正在进行的运行，因为我们希望允许这些生产部署完成
+# Only allow one deployment at a time, skip runs queued between the running run and the latest queue
+# However, do not cancel the running run, as we want to allow these production deployments to complete
 concurrency:
   group: pages
   cancel-in-progress: false
 
 jobs:
-  # 构建工作
+  # Build job
   build:
     runs-on: ubuntu-latest
     defaults:
@@ -36,7 +36,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
+          fetch-depth: 0 # Not needed if lastUpdated is not enabled
       
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -53,7 +53,7 @@ jobs:
       
       - name: Temporarily modify base path for GitHub Pages
         run: |
-          # 创建一个临时的config文件，将base从'/doc/'改为'/nexent/'用于GitHub Pages
+          # Create a temporary config file, changing base from '/doc/' to '/nexent/' for GitHub Pages
           sed 's|base: '"'"'/doc/'"'"'|base: '"'"'/nexent/'"'"'|g' docs/.vitepress/config.mts > docs/.vitepress/config.github.mts
           mv docs/.vitepress/config.mts docs/.vitepress/config.original.mts
           mv docs/.vitepress/config.github.mts docs/.vitepress/config.mts
@@ -70,7 +70,7 @@ jobs:
         with:
           path: doc/docs/.vitepress/dist
 
-  # 部署工作
+  # Deploy job
   deploy:
     environment:
       name: github-pages
