🔨 Add docker automatic pull

--- a/.github/workflows/auto-unit-test.yml
+++ b/.github/workflows/auto-unit-test.yml
@@ -1,16 +1,28 @@
 name: Run Automated Unit Tests
 
+concurrency:
+  group: automated-unit-test-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   workflow_dispatch:
     inputs:
       runner_label_json:
-        description: 'JSON格式的runner标签数组（如["ubuntu-latest"]或["self-hosted"])'
+        description: 'runner array in json format (e.g. ["ubuntu-latest"] or ["self-hosted"])'
         required: false
         default: '["ubuntu-latest"]'
   pull_request:
     branches: [develop]
+    paths:
+      - 'backend/**'
+      - 'sdk/**'
+      - 'test/**'
   push:
     branches: [develop]
+    paths:
+      - 'backend/**'
+      - 'sdk/**'
+      - 'test/**'
 
 jobs:
   test:
