🐛 fix When deploying, the mirror sources of db, kong, and auth in mainland China are not configured.

--- a/docker/.env.general
+++ b/docker/.env.general
@@ -7,3 +7,7 @@ POSTGRESQL_IMAGE=postgres:15-alpine
 REDIS_IMAGE=redis:alpine
 MINIO_IMAGE=quay.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
 OPENSSH_SERVER_IMAGE=nexent/nexent-ubuntu-terminal:latest
+
+SUPABASE_KONG=kong:2.8.1
+SUPABASE_GOTRUE=supabase/gotrue:v2.170.0
+SUPABASE_DB=supabase/postgres:15.8.1.060
