--- a/docker/.env.mainland
+++ b/docker/.env.mainland
@@ -7,3 +7,7 @@ POSTGRESQL_IMAGE=docker.m.daocloud.io/postgres:15-alpine
 REDIS_IMAGE=docker.m.daocloud.io/redis:alpine
 MINIO_IMAGE=quay.m.daocloud.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
 OPENSSH_SERVER_IMAGE=ccr.ccs.tencentyun.com/nexent-hub/nexent-ubuntu-terminal:latest
+
+SUPABASE_KONG=swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/kong:2.8.1
+SUPABASE_GOTRUE=swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/supabase/gotrue:v2.170.0
+SUPABASE_DB=swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/supabase/postgres:15.8.1.060
