--- a/.github/workflows/auto-web-check-dev.yml
+++ b/.github/workflows/auto-web-check-dev.yml
@@ -1,7 +1,7 @@
-name: Run Auto Web Check
+name: Run Auto Web Type Check
 
 concurrency:
-  group: auto-web-check-${{ github.ref }}
+  group: auto-web-type-check-${{ github.ref }}
   cancel-in-progress: true
 
 on:
@@ -34,6 +34,11 @@ jobs:
           node-version: '18'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        run: |
+          cd frontend
+          npm ci
 
       - name: Run TypeScript type check
         run: |
