--- a/.github/workflows/auto-web-check-dev.yml
+++ b/.github/workflows/auto-web-check-dev.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd frontend
-          npm ci
+          npm install
 
       - name: Run TypeScript type check
         run: |
