--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "psycopg2-binary==2.9.10",
     "PyJWT>=2.8.0",
     "sqlalchemy~=2.0.37",
-    "supabase==2.15.0",
+    "supabase>=2.18.1",
     "websocket-client>=1.8.0",
     "pyyaml>=6.0.2",
     "redis>=5.0.0",
