--- a/.dockerignore
+++ b/.dockerignore
@@ -18,6 +18,7 @@
 
 # Docker
 .dockerignore
+make/
 
 # Logs
 logs
@@ -40,6 +41,18 @@ build/
 backend/assets/*
 !backend/assets/test.wav
 backend/flower_db.sqlite
+uploads/
+test/
+assets/
+
+# Github
+.github/
+
+# Cursor
+.cursor/
+
+# Dev Container
+.devcontainer/
 
 # OS generated files
 .DS_Store
