--- a/make/terminal/Dockerfile
+++ b/make/terminal/Dockerfile
@@ -19,16 +19,12 @@ RUN apt-get clean && \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
-# Create development user
-ARG DEV_USER=linuxserver.io
-RUN useradd -m -s /bin/bash $DEV_USER && \
-    usermod -aG sudo $DEV_USER && \
-    echo "$DEV_USER ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+# Using root user - no additional user creation needed
 
-# Configure SSH - disable root login + disable password authentication
+# Configure SSH - enable root login + enable password authentication
 RUN mkdir /var/run/sshd && \
-    sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin no/' /etc/ssh/sshd_config && \
-    sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config
+    sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
+    sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
 
 # Install Miniconda
 ARG TARGETARCH
@@ -36,21 +32,18 @@ RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-$(if [ "$TA
     bash /tmp/miniconda.sh -b -p $CONDA_DIR && \
     rm /tmp/miniconda.sh
 
-# Set conda permissions
-RUN chown -R $DEV_USER:$DEV_USER $CONDA_DIR
+# Conda permissions - root owns everything by default
 
 # Add conda to PATH and initialize
 ENV PATH="$CONDA_DIR/bin:$PATH"
 RUN conda init
 
-# Create .ssh directory
-RUN mkdir -p /home/$DEV_USER/.ssh && \
-    chown $DEV_USER:$DEV_USER /home/$DEV_USER/.ssh && \
-    chmod 700 /home/$DEV_USER/.ssh
+# Create .ssh directory for root
+RUN mkdir -p /root/.ssh && \
+    chmod 700 /root/.ssh
 
 # Create default working directory
-RUN mkdir -p /opt/terminal && \
-    chown $DEV_USER:$DEV_USER /opt/terminal
+RUN mkdir -p /opt/terminal
 
 # Set working directory
 WORKDIR /opt
