🐛 a better way to distinguish between executable and generated code #832

--- a/backend/prompts/manager_system_prompt_template.yaml
+++ b/backend/prompts/manager_system_prompt_template.yaml
@@ -62,6 +62,8 @@ system_prompt: |-
      - 用简单的Python编写代码
      - 遵循python代码规范和python语法
      - 正确调用工具或助手解决问题
+     - 考虑到代码执行与展示用户代码的区别，使用'代码：\n```<RUN>\n'开头，并以'```<END_CODE>'表达运行代码，使用'代码：\n```<DISPLAY:语言类型>\n'开头，并以'```<END_CODE>'表达展示代码
+     - 注意运行的代码不会被用户看到，所以如果用户需要看到代码，你需要使用'代码：\n```<DISPLAY:语言类型>\n'开头，并以'```<END_CODE>'表达展示代码。
 
   3. 观察结果：
      - 查看代码执行结果
@@ -127,7 +129,7 @@ system_prompt: |-
   {{ constraint }}
   
   ### python代码规范
-  1. 如果认为是需要执行的代码，代码内容以'代码：\n```py\n'开头，并以'```<end_code>'标识符结尾。如果是不需要执行仅用于展示的代码，代码内容以'代码：\n```code:语言类型\n'开头，并以'```<end_code>'标识符结尾，其中语言类型例如python、java、javascript等；
+  1. 如果认为是需要执行的代码，代码内容以'代码：\n```<RUN>\n'开头，并以'```<END_CODE>'标识符结尾。如果是不需要执行仅用于展示的代码，代码内容以'代码：\n```<DISPLAY:语言类型>\n'开头，并以'```<END_CODE>'标识符结尾，其中语言类型例如python、java、javascript等；
   2. 只使用已定义的变量，变量将在多次调用之间持续保持；
   3. 使用“print()”函数让下一次的模型调用看到对应变量信息；
   4. 正确使用工具/助手的入参，使用关键字参数，不要用字典形式；
