♻️  fix monitoring unitest

--- a/.github/workflows/auto-unit-test.yml
+++ b/.github/workflows/auto-unit-test.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           cd backend
           uv sync --extra data-process --extra test
-          uv pip install -e ../sdk
+          uv pip install -e "../sdk[dev]"
           cd ..
 
       - name: Run all tests and collect coverage
