🎨 Inappropriate rendering for examples in generated promt #688

--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -91,7 +91,7 @@ performance = [
     "prometheus-client"
 ]
 dev = [
-    "nexent[quality, data_process, performance]"
+    "nexent[dev, data_process]"
 ]
 
 [tool.setuptools.packages.find]
