🐛 Optimize Elasticsearch Startup Parameters and Monitoring Parameters

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -26,6 +26,14 @@ NLTK_DATA=/opt/models/nltk_data
 ELASTICSEARCH_HOST=http://nexent-elasticsearch:9200
 ELASTIC_PASSWORD=nexent@2025
 
+# Elasticsearch Memory Configuration
+ES_JAVA_OPTS="-Xms1g -Xmx1g"
+
+# Elasticsearch Disk Watermark Configuration
+ES_DISK_WATERMARK_LOW=85%
+ES_DISK_WATERMARK_HIGH=90%
+ES_DISK_WATERMARK_FLOOD_STAGE=95%
+
 # Main Services
 ELASTICSEARCH_SERVICE=http://nexent:5010/api
 NEXENT_MCP_SERVER=http://nexent:5011
@@ -124,3 +132,12 @@ QUEUES=process_q,forward_q
 WORKER_NAME=
 WORKER_CONCURRENCY=4
 
+
+# Telemetry and Monitoring Configuration
+ENABLE_TELEMETRY=false
+SERVICE_NAME=nexent-backend
+JAEGER_ENDPOINT=http://localhost:14268/api/traces
+PROMETHEUS_PORT=8000
+TELEMETRY_SAMPLE_RATE=1.0
+LLM_SLOW_REQUEST_THRESHOLD_SECONDS=5.0
+LLM_SLOW_TOKEN_RATE_THRESHOLD=10.0
